--- a/popup.html
+++ b/popup.html
@@ -34,6 +34,17 @@
         <span class="theme-desc">Soothing pastel theme</span>
       </label>
 
+      <label class="theme-card" data-theme="signal">
+        <input type="radio" name="theme" value="signal">
+        <div class="theme-preview signal-preview">
+          <div class="preview-color" style="background: #0a1929;"></div>
+          <div class="preview-color" style="background: #2090ea;"></div>
+          <div class="preview-color" style="background: #00d984;"></div>
+        </div>
+        <span class="theme-name">Signal</span>
+        <span class="theme-desc">The messaging app don't you know?</span>
+      </label>
+
       <label class="theme-card" data-theme="custom">
         <input type="radio" name="theme" value="custom">
         <div class="theme-preview custom-preview">
