--- a/popup.html
+++ b/popup.html
@@ -34,6 +34,17 @@
         <span class="theme-desc">Soothing pastel theme</span>
       </label>
 
+      <label class="theme-card" data-theme="spooky">
+        <input type="radio" name="theme" value="spooky">
+        <div class="theme-preview spooky-preview">
+          <div class="preview-color" style="background: #130b1f;"></div>
+          <div class="preview-color" style="background: #ff8a3d;"></div>
+          <div class="preview-color" style="background: #5ce6b2;"></div>
+        </div>
+        <span class="theme-name">Spooky</span>
+        <span class="theme-desc">Halloween night vibes</span>
+      </label>
+
       <label class="theme-card" data-theme="signal">
         <input type="radio" name="theme" value="signal">
         <div class="theme-preview signal-preview">
