fix like everything, improvements to graph, explore page, catacombs, upgrade route, winter theme, leaderboard and ui

--- a/popup.html
+++ b/popup.html
@@ -56,6 +56,17 @@
         <span class="theme-desc">The messaging app don't you know?</span>
       </label>
 
+      <label class="theme-card" data-theme="winter">
+        <input type="radio" name="theme" value="winter">
+        <div class="theme-preview winter-preview">
+          <div class="preview-color" style="background: #0d1419;"></div>
+          <div class="preview-color" style="background: #6bb6ff;"></div>
+          <div class="preview-color" style="background: #89ddff;"></div>
+        </div>
+        <span class="theme-name">Winter</span>
+        <span class="theme-desc">Frosty and icy wonderland</span>
+      </label>
+
       <label class="theme-card" data-theme="custom">
         <input type="radio" name="theme" value="custom">
         <div class="theme-preview custom-preview">
