some more things

--- a/popup.html
+++ b/popup.html
@@ -67,6 +67,17 @@
         <span class="theme-desc">Frosty and icy wonderland</span>
       </label>
 
+      <label class="theme-card" data-theme="slack">
+        <input type="radio" name="theme" value="slack">
+        <div class="theme-preview slack-preview">
+          <div class="preview-color" style="background: #4a154b;"></div>
+          <div class="preview-color" style="background: #36c5f0;"></div>
+          <div class="preview-color" style="background: #2eb67d;"></div>
+        </div>
+        <span class="theme-name">Slack</span>
+        <span class="theme-desc">Where work happens</span>
+      </label>
+
       <label class="theme-card" data-theme="custom">
         <input type="radio" name="theme" value="custom">
         <div class="theme-preview custom-preview">
